# HintzCompiler

./: .gitignore  LICENSE  README.md  compiler.py  hintz_patch_docs.patch  hintz_patch_docs.patch:Zone.Identifier  pyproject.toml  setup.py
docs/: SymbolTable.md
hintzCompiler/: compiler.py  preprocessor.py
hintzCompiler/docs/: IR.md
hintzCompiler/grammar/: c89.lark
hintzCompiler/src/: cfg.py  ir_nodes.py  transformer.py
hintzCompiler/tests/: temp_test.hz  test_basic.py  test_cfg.py  test_includes.py
samples/: exampleOfElseWithFor.hz  exampleOfForInFor.hz  exampleOfForLoop.hz  exampleOfGoto.hz  exampleOfIfWithFor.hz  exampleOfIncludes.hz  exampleOfSwitch.hz
src/: ir_nodes.py  symbol_table.py  transformer.py
tests/: test_basic.py  test_sample.c89
